  * C++ base classes as reported by AIX DBX are interpreted correctly.
  * Value changes in status displays are flagged more precisely.
  * Creating and updating data displays uses a common code base.

- `Set ()' dialog improvements:
  * You can now set structs as a whole.
  * A drop down selection of previously set values is available.
  * Invalid values cause the dialog to remain open.

- When DDD creates a new dependent display, it copies the selection
  state from the originating display.  This way, you can easily unfold
  linked elements simply by clicking `Disp *' again and again.

- Anonymous unions are no longer prefixed by `='.


Source exploration
------------------

- Double-clicking on a function call (that is, an identifier followed
  by a `(' character) will lead you to the function definition.


Platforms
---------

- You can build DDD out-of-the box on Windows 95 and NT (via cygwin32,
  http://www.cygnus.com/misc/gnu-win32/).  This is useful for people
  using GCC and GDB on Windows, or for people using DDD as a front-end
  to JDB.  Note that you need a Windows X server to run DDD.


Customization
-------------

- History customization.  You can customize the number of items in
  pop-down value histories as well as the way they are sorted.  See
  the `popdownHistorySize' and `sortPopdownHistory' resources.

- Signal settings are saved with the current session.


Bug fixes
---------

- The `Disp *' button dereferences pointers as it should.

- Improved redirection handling.  You can redirect stderr away from
  the execution window, using `run 2> FILE'.  The debugger command
  `run 2> /dev/tty' will redirect stderr to the debugger console.

- In a separate window setting, data buttons are properly placed.

- Minor performance improvements.



DDD 3.0
=======

DDD 3.0 brings a new, `clean' look, Java support, and JDB support.


User Interface
--------------

- New, `clean' look.  One single tool bar at the top provides all actions.
